force-app/main/default/objects/Work_Item_Status__mdt/Work_Item_Status__mdt.object-meta.xml
<CustomObject>
    <label>Work Item Status</label>
    <pluralLabel>Work Item Statuses</pluralLabel>
</CustomObject>