force-app/main/default/objects/Work_Item_Status__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the mapping is active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>