force-app/main/default/objects/Work_Item_Status__mdt/fields/Jira_Story_Status__c.field-meta.xml
<CustomField>
    <fullName>Jira_Story_Status__c</fullName>
    <description>The corresponding status for the Jira_Story__c object</description>
    <label>Jira Story Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>