force-app/main/default/objects/Work_Item_Status__mdt/fields/Jira_Ticket_Status__c.field-meta.xml
<CustomField>
    <fullName>Jira_Ticket_Status__c</fullName>
    <label>Jira Ticket Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>