force-app/main/default/objects/Work_Item_Status__mdt/fields/Jira_Transition_ID__c.field-meta.xml
<CustomField>
    <fullName>Jira_Transition_ID__c</fullName>
    <description>The Jira transition ID to move to this status (optional)</description>
    <label>Jira Transition ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>