force-app/main/default/objects/Work_Item_Status__mdt/fields/Work_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Status__c</fullName>
    <description>The status of the sf_devops__Work_Item__c object</description>
    <label>Work Item Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>