force-app/main/default/objects/Work_Item_Status__mdt/listViews/Jira_devops.listView-meta.xml
<ListView>
    <fullName>Jira_devops</fullName>
    <columns>DeveloperName</columns>
    <columns>Work_Item_Status__c</columns>
    <columns>Jira_Story_Status__c</columns>
    <columns>Jira_Ticket_Status__c</columns>
    <columns>Jira_Transition_ID__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>Jira devops</label>
</ListView>